button alignment fixes

--- a/common/common.scss
+++ b/common/common.scss
@@ -89,30 +89,29 @@
 
       #create-topic {
         flex: 1 1 auto;
-        order: 5;
-        margin-bottom: 0.5em;
+        order: 6;
+        margin-top: 0.5em;
       }
 
       button {
         order: 6;
       }
       .notifications-button {
-        order: 7;
-        button {
-          height: 2em;
-        }
+        order: 5;
+        margin-right: 0.5em;
+        margin-top: 0.5em;
       }
 
       .edit-category {
         flex: 1 1 auto;
-        margin-right: 0.5em;
+        margin-top: 0.5em;
       }
 
       .categories-admin-dropdown {
         order: 8;
-        margin-bottom: 0.5em;
+        margin-bottom: 0;
         margin-left: 0.5em;
-        margin-top: -1px;
+        margin-top: 0.5em;
         button {
           height: 2em;
         }
@@ -179,14 +178,12 @@
 
   .tags-page.staff {
     .list-controls {
-      #create-topic {
-        width: 100%;
-      }
       .admin-tag {
         order: 9;
         flex: 1 1 auto;
-        &:not(.btn-danger) {
-          margin: 0 0.5em;
+        margin-top: 0.5em;
+        &.btn-danger {
+          margin-left: 0.5em;
         }
       }
     }
